# cline_utils

./: CMakeLists.txt  LICENSE.txt  README.md  TODO.md
include/: cline_utils.h
source/: CMakeLists.txt  example_main.cpp
tests/: CMakeLists.txt  test_optlonger_config.cpp  test_optlonger_duplicate.cpp  test_optlonger_missing_arg.cpp  test_optlonger_missing_opt.cpp  test_optlonger_unrecognized_opt.cpp
