# ------------------------------------------------------------------------
#
#                         CMakeLists.txt for cline_utils
#                                        V 0.01
#
#                            (c) Brian Lynch February, 2015
#
# ------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.2)

project(
   cline_utils
   VERSION 1.0.1
   LANGUAGES CXX
       )

add_subdirectory(source)